angular-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-frontend
  template:
    metadata:
      labels:
        app: angular-frontend
    spec:
      containers:
      - name: angular-frontend
        image: tybahmed/front:v1
        #image: tybahmed/angular-fixed:v2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
