springdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-spring
  namespace: argocd
  labels:
    app: app-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-spring
  template:
    metadata:
      labels:
        app: app-spring
    spec:
      containers:
      - name: app-spring
        image: tybahmed/spring-app:v1
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 8089
        resources:
          limits:
            cpu: 0.2
            memory: "200Mi"
