angular-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: angular-frontend
  namespace: argocd
  labels:
    app.kubernetes.io/instance: spring-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: angular-frontend
