mysqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-spring
  namespace: argocd
  labels:
    app: app-spring
spec:
  type: ClusterIP
  selector:
    app: app-spring
  ports:
  - protocol: TCP
    name: http
    port: 8089
    targetPort: 8089
