sqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-standalone
  namespace: argocd
  labels:
    app: mysql-app
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-app
    tier: mysql
  type: ClusterIP
